--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emailjs/browser": "^3.11.0",
     "animate.css": "^4.1.1",
     "flag-icons": "^7.1.0",
+    "i18n": "^0.15.1",
+    "i18next": "^23.7.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1"
